Update until intro to pytorch part 3

--- a/intro-to-pytorch/Part 1 - Tensors in PyTorch (Solution).ipynb
+++ b/intro-to-pytorch/Part 1 - Tensors in PyTorch (Solution).ipynb
@@ -252,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3171]])\n"
+      "tensor([[0.3171]])\n"
      ]
     }
    ],
@@ -284,19 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.86419183, 0.46774519, 0.65013356],\n",
+       "       [0.51692629, 0.30056907, 0.32440442],\n",
+       "       [0.43518576, 0.7709046 , 0.11829585],\n",
+       "       [0.30795759, 0.77318431, 0.65660475]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,21 +309,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.3367  0.5953  0.6543\n",
-       " 0.8653  0.5995  0.2804\n",
-       " 0.4841  0.9836  0.3388\n",
-       " 0.2559  0.5108  0.3999\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[0.8642, 0.4677, 0.6501],\n",
+       "        [0.5169, 0.3006, 0.3244],\n",
+       "        [0.4352, 0.7709, 0.1183],\n",
+       "        [0.3080, 0.7732, 0.6566]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,19 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.86419183, 0.46774519, 0.65013356],\n",
+       "       [0.51692629, 0.30056907, 0.32440442],\n",
+       "       [0.43518576, 0.7709046 , 0.11829585],\n",
+       "       [0.30795759, 0.77318431, 0.65660475]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,21 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.6734  1.1906  1.3087\n",
-       " 1.7306  1.1989  0.5609\n",
-       " 0.9682  1.9672  0.6777\n",
-       " 0.5118  1.0216  0.7997\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[1.7284, 0.9355, 1.3003],\n",
+       "        [1.0339, 0.6011, 0.6488],\n",
+       "        [0.8704, 1.5418, 0.2366],\n",
+       "        [0.6159, 1.5464, 1.3132]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,19 +387,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.67338991,  1.19063124,  1.30867888],\n",
-       "       [ 1.73062448,  1.19890728,  0.56087946],\n",
-       "       [ 0.96818606,  1.96715243,  0.67768568],\n",
-       "       [ 0.51182782,  1.02163565,  0.79972807]])"
+       "array([[1.72838367, 0.93549037, 1.30026712],\n",
+       "       [1.03385257, 0.60113814, 0.64880885],\n",
+       "       [0.87037153, 1.5418092 , 0.23659169],\n",
+       "       [0.61591517, 1.54636862, 1.31320951]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
