--- a/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/intro-to-pytorch/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -75,9 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -103,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3367, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -141,15 +162,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2977, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = nn.Sequential(nn.Linear(784, 128),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(128, 64),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(64, 10),\n",
+    "                      nn.LogSoftmax(dim=1))\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -494,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
